; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/gen/extr_pe_gen.c_PE_enter_debugger.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/gen/extr_pe_gen.c_PE_enter_debugger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEBUGFlag = common dso_local global i32 0, align 4
@DB_NMI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PE_enter_debugger(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @DEBUGFlag, align 4
  %4 = load i32, i32* @DB_NMI, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @Debugger(i8* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @Debugger(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
